// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText component closes dialog 1`] = `
<div>
  <div
    class="RichText-root-192"
  >
    <h2
      class="MuiTypography-root RichText-title-193 Typography-root-194 MuiTypography-h2"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root RichText-title-193 Typography-root-194 MuiTypography-h3"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root RichText-title-193 Typography-root-194 MuiTypography-h4"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root RichText-title-193 Typography-root-194 MuiTypography-h5"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root RichText-title-193 Typography-root-194 MuiTypography-h6"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root Typography-root-194 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root Typography-root-194 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-202 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"External\\",\\"action\\":\\"https://google.co.uk\\"}"
        href="https://google.co.uk"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          External
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-202 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Entry\\",\\"action\\":\\"/testing-simple-page/\\"}"
        href="/testing-simple-page/"
      >
        <span>
          Entry
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-202 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Asset\\",\\"action\\":\\"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png\\"}"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          Asset
        </span>
      </a>
       
      <button
        class="MuiButtonBase-root MuiButton-root Button-root-208 MuiButton-contained Button-contained-210 EmbeddedLink MuiButton-containedPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Aerodek Robust Plus\\",\\"action\\":\\"product-category-page/product-sub-category-page/aerodek-robust-plus/\\"}"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label Button-label-211"
        >
          Aerodek Robust Plus
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root Typography-root-194 MuiTypography-body1 MuiTypography-gutterBottom"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root Typography-root-194 MuiTypography-body1 MuiTypography-gutterBottom"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root Typography-root-194 MuiTypography-body1 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-208 MuiButton-contained Button-contained-210 EmbeddedLink MuiButton-containedPrimary"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Support\\",\\"action\\":\\"landing-page/\\"}"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-211"
      >
        Support
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Customer Support"
      class="embedded-asset"
      src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
    />
    <p
      class="MuiTypography-root Typography-root-194 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root Typography-root-194 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      <button
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-202 Anchorlink MuiLink-button MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Open dialog\\",\\"action\\":\\"Dialog\\"}"
        type="button"
      >
        <span>
          Open dialog
        </span>
      </button>
      
    </p>
  </div>
</div>
`;

exports[`RichText component falls back with incorrect data 1`] = `
<div>
  <div
    class="RichText-root-283"
  >
    <p
      class="MuiTypography-root Typography-root-285 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    />
  </div>
</div>
`;

exports[`RichText component renders correctly 1`] = `
<div>
  <div
    class="RichText-root-1"
  >
    <h2
      class="MuiTypography-root RichText-title-2 Typography-root-3 MuiTypography-h2"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root RichText-title-2 Typography-root-3 MuiTypography-h3"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root RichText-title-2 Typography-root-3 MuiTypography-h4"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root RichText-title-2 Typography-root-3 MuiTypography-h5"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root RichText-title-2 Typography-root-3 MuiTypography-h6"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root Typography-root-3 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root Typography-root-3 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-11 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"External\\",\\"action\\":\\"https://google.co.uk\\"}"
        href="https://google.co.uk"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          External
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-11 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Entry\\",\\"action\\":\\"/testing-simple-page/\\"}"
        href="/testing-simple-page/"
      >
        <span>
          Entry
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-11 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Asset\\",\\"action\\":\\"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png\\"}"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          Asset
        </span>
      </a>
       
      <button
        class="MuiButtonBase-root MuiButton-root Button-root-17 MuiButton-contained Button-contained-19 EmbeddedLink MuiButton-containedPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Aerodek Robust Plus\\",\\"action\\":\\"product-category-page/product-sub-category-page/aerodek-robust-plus/\\"}"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label Button-label-20"
        >
          Aerodek Robust Plus
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root Typography-root-3 MuiTypography-body1 MuiTypography-gutterBottom"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root Typography-root-3 MuiTypography-body1 MuiTypography-gutterBottom"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root Typography-root-3 MuiTypography-body1 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-17 MuiButton-contained Button-contained-19 EmbeddedLink MuiButton-containedPrimary"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Support\\",\\"action\\":\\"landing-page/\\"}"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-20"
      >
        Support
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Customer Support"
      class="embedded-asset"
      src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
    />
    <p
      class="MuiTypography-root Typography-root-3 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root Typography-root-3 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      <button
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-11 Anchorlink MuiLink-button MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Open dialog\\",\\"action\\":\\"Dialog\\"}"
        type="button"
      >
        <span>
          Open dialog
        </span>
      </button>
      
    </p>
  </div>
</div>
`;

exports[`RichText component renders when dialog clicked 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="RichText-root-101"
  >
    <h2
      class="MuiTypography-root RichText-title-102 Typography-root-103 MuiTypography-h2"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root RichText-title-102 Typography-root-103 MuiTypography-h3"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root RichText-title-102 Typography-root-103 MuiTypography-h4"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root RichText-title-102 Typography-root-103 MuiTypography-h5"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root RichText-title-102 Typography-root-103 MuiTypography-h6"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root Typography-root-103 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root Typography-root-103 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-111 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"External\\",\\"action\\":\\"https://google.co.uk\\"}"
        href="https://google.co.uk"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          External
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-111 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Entry\\",\\"action\\":\\"/testing-simple-page/\\"}"
        href="/testing-simple-page/"
      >
        <span>
          Entry
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-111 Anchorlink MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Asset\\",\\"action\\":\\"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png\\"}"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          Asset
        </span>
      </a>
       
      <button
        class="MuiButtonBase-root MuiButton-root Button-root-117 MuiButton-contained Button-contained-119 EmbeddedLink MuiButton-containedPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Aerodek Robust Plus\\",\\"action\\":\\"product-category-page/product-sub-category-page/aerodek-robust-plus/\\"}"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label Button-label-120"
        >
          Aerodek Robust Plus
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root Typography-root-103 MuiTypography-body1 MuiTypography-gutterBottom"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root Typography-root-103 MuiTypography-body1 MuiTypography-gutterBottom"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root Typography-root-103 MuiTypography-body1 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-117 MuiButton-contained Button-contained-119 EmbeddedLink MuiButton-containedPrimary"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Support\\",\\"action\\":\\"landing-page/\\"}"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-120"
      >
        Support
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Customer Support"
      class="embedded-asset"
      src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
    />
    <p
      class="MuiTypography-root Typography-root-103 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root Typography-root-103 MuiTypography-body1 MuiTypography-gutterBottom"
      data-testid="typography"
    >
      <button
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-111 Anchorlink MuiLink-button MuiTypography-colorPrimary"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Open dialog\\",\\"action\\":\\"Dialog\\"}"
        type="button"
      >
        <span>
          Open dialog
        </span>
      </button>
      
    </p>
  </div>
</div>
`;

exports[`RichText component renders with no data 1`] = `<div />`;
